--- a/core-utils/src/main/res/values/dimens.xml
+++ b/core-utils/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="standard_margin_twice">32dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="standard_margin_half">8dp</dimen>
     <dimen name="standard_margin_quarter">4dp</dimen>
