--- a/feature-details/src/main/res/values/styles.xml
+++ b/feature-details/src/main/res/values/styles.xml
@@ -3,4 +3,10 @@
     <style name="ToolbarText" parent="@android:style/TextAppearance">
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="CaptionText">
+        <item name="android:layout_marginTop">@dimen/standard_margin</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
