--- a/feature-details/src/main/res/layout/fragment_details.xml
+++ b/feature-details/src/main/res/layout/fragment_details.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
         android:fitsSystemWindows="true"
+        android:background="@android:color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
