Add UI tests for feature-details module's DetailsFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,7 @@
     </fragment>
 
     <fragment android:id="@+id/movieDetailsFragment"
-        android:name="com.example.feature.details.presentation.DetailFragment">
+        android:name="com.example.feature.details.presentation.DetailsFragment">
 
         <argument
             android:name="movie_id"
