--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,19 +4,22 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/movieListFragment">
 
-    <fragment android:id="@+id/movieListFragment"
+    <fragment
+        android:id="@+id/movieListFragment"
         android:name="com.example.feature.list.presentation.ListFragment">
 
-        <action android:id="@+id/actionMovieDetails"
-            app:destination="@id/movieDetailsFragment"/>
+        <action
+            android:id="@+id/actionMovieDetails"
+            app:destination="@id/movieDetailsFragment" />
     </fragment>
 
-    <fragment android:id="@+id/movieDetailsFragment"
+    <fragment
+        android:id="@+id/movieDetailsFragment"
         android:name="com.example.feature.details.presentation.DetailsFragment">
 
         <argument
             android:name="movie_id"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
 </navigation>
